# adc_download

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  adc_download.py  coverage.ini  mkdocs.yml  pyproject.toml
docs/: index.md  modules.md
docs/reference/: cli.md
scripts/: gen-readme-data.py
scripts/templates/: CREDITS.md  README.md
src/adc_download/: __init__.py  __main__.py  cli.py
tests/: test_cli.py  test_foo.py
